selects filters not opening on mobiles fix

--- a/EuroCarsUSA/wwwroot/css/site.css
+++ b/EuroCarsUSA/wwwroot/css/site.css
@@ -261,7 +261,7 @@ div.carPhotoThumbnailSelected {
         position: fixed;
         top: 0;
         right: -100%; /* Start off the screen (to the right) */
-        width: 98%; /* Use 80% of the screen width */
+        width: 100%; 
         height: 100%; /* Use 100% of the screen height */
         overflow: auto; /* Add scroll if content is larger than screen */
         transition: right 0.3s ease-in-out; /* Animate the right property */
